# mondriaan

./: .gitignore  CMakeLists.txt  Makefile  README  mondriaan.mk
docs/: HYPERGRAPH.html  MATLAB.html  USERS_GUIDE.html  USERS_GUIDE_OPT.html  example.c  extendedMM.tex  hypergraph.mtx  print.css  script.js  style.css
src/: Cartesian.c  Cartesian.h  DistributeMat.c  DistributeMat.h  DistributeVec.c  DistributeVec.h  DistributeVecGreedy.c  DistributeVecGreedy.h  DistributeVecLib.c  DistributeVecLib.h  DistributeVecLocal.c  DistributeVecLocal.h  DistributeVecOpt2.c  DistributeVecOpt2.h  DistributeVecOrig.c  DistributeVecOrig.h  DistributeVecOrigEq.c  DistributeVecOrigEq.h  FreeNonzeros.c  FreeNonzeros.h  GainBucket.c  GainBucket.h  GainBucketArray.c  GainBucketArray.h  GainBucketList.c  GainBucketList.h  Graph.c  Graph.h  HKLFM.c  HKLFM.h  Heap.c  Heap.h  Makefile  Matalloc.c  Matalloc.h  Match.c  Match.h  MatchInproduct.c  MatchInproduct.h  MatchMatchers.c  (+20 more)
src/MondriaanOpt/: Makefile  MondriaanOpt.c  errors.c  errors.h  matching.c  matching.h  matrix.c  matrix.h  options.c  options.h  solution.c  solution.h  solver.c  solver.h
tests/: Makefile  Mondriaan.defaults  arc130.mtx  emm-arc130.mtx  m201_arc130.mtx-C4  m201_arc130.mtx-P4  m201_arc130.mtx-u4  m201_arc130.mtx-v4  m300_arc130.mtx-C8  m300_arc130.mtx-I8  m300_arc130.mtx-P8  m300_arc130.mtx-u8  m300_arc130.mtx-v8  outMMSparseMatrixPrintEntries0  outMMSparseMatrixPrintHeader0  outMMSparseMatrixPrintPstart0  outMMSparseMatrixPrintTail0  outMMSparseMatrixPrintWeights0  outMMWriteCartesianSubmatrices0  outMMWriteSparseMatrix0  outMondriaan0  outPrintCom0  outPrintHelp0  outPrintHistogram0  outPrintVecLocalStatistics0  outPrintVecStatistics0  runtest  testHelper_DisconnectedMatrix.c  testHelper_DisconnectedMatrix.h  test_AddDummiesToSparseMatrix.c  test_AssignColumnToProc.c  test_AssignRemainingColumns.c  test_AssignRemainingNonemptyColumns.c  test_BalanceParts.c  test_BiPartHyperGraph2SparseMatrix.c  test_BucketDeleteMax.c  test_BucketInsert.c  test_BucketMove.c  test_CRS2CCS.c  test_CSort.c  (+121 more)
tools/: Makefile  MatlabHelper.c  MatlabHelper.h  MatlabMondriaan.c  MatlabMondriaanOpt.c  Mondriaan.c  Mondriaan.defaults  MondriaanGIF  MondriaanMovie  MondriaanPlot.c  MondriaanStats.c  Profile.c  README  RunProfiler  mmread.m  mondriaan.m  mondriaanOpt.m  mondriaanOptPlot.m  mondriaanplot.m
